[tool.poetry]
name = "smartmin"
version = "5.0.3"
description = "Scaffolding system for Django object management."
authors = ["Nyaruka Ltd <code@nyaruka.com>"]
readme = "README.md"
license = "BSD"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Framework :: Django",
]
packages = [
    { include = "smartmin" },
]

[tool.poetry.urls]
repository = "http://github.com/nyaruka/smartmin"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">= 4.0, < 5.1"
celery = ">= 5.1"
redis = ">= 3.5.3"
sqlparse = ">=0.4.1,<0.6.0"
xlrd = "^1.2.0"
xlwt = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
coverage = {extras = ["toml"], version = "^7.2.7"}
isort = "^5.12.0"
ruff = "^0.0.278"
psycopg2-binary = "^2.9.1"
funcsigs = "^1.0.2"
Pillow = "^10.3.0"
colorama = "^0.4.6"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501", "F405"]
fix = true

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 120
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]

[tool.coverage.run]
source = ["smartmin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
