[project]
name = "smartmin"
version = "5.2.5"
description = "Scaffolding system for Django object management."
license = { text = "BSD" }
authors = [
    {name = "TextIt", email = "code@textit.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "Django>=5.1.15,<6.1",
    "sqlparse>=0.4.1,<0.6.0",
    "xlrd>=1.2.0",
    "xlwt>=1.3.0",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Framework :: Django",
]

[project.urls]
repository = "http://github.com/nyaruka/smartmin"

[project.optional-dependencies]
dev = [
    "celery>=5.1.0",
    "redis>=3.5.3",
    "coverage[toml]>=7.2.7",
    "ruff>=0.15.7",
    "psycopg2-binary>=2.9.1",
    "funcsigs>=1.0.2",
    "Pillow>=12.1.1",
    "colorama>=0.4.6",
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E741", "E501", "F405"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["smartmin"]
section-order = ["future", "standard-library", "third-party", "django", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.coverage.run]
source = ["smartmin"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
